--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
-    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
