--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,9 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-smooth-scrollbar": "^8.0.6",
     "react-transition-group": "^4.4.5",
+    "smooth-scrollbar": "^8.8.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "uuid": "^9.0.0",
