--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-use-smooth-scroll": "^1.0.0",
     "smooth-scrollbar": "^8.8.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
